Added Clear and Backspace
Clear content with these buttons

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <button class="three number calcBtn">3</button>
             <button class="zero number calcBtn">0</button>  
             <button class="comma decimal calcBtn">,</button>
+            <button class="clear calcBtn">Clear</button>
+            <button class="back calcBtn">⟵</button>
         </div>
     </div>
     <script src="./index.js"></script>
